--- a/devils-hunt.html
+++ b/devils-hunt.html
@@ -12,11 +12,11 @@
     <meta name="description" content="Software, Games &amp; More">
     <meta name="twitter:title" content="BlaXrew Studios">
     <meta name="twitter:description" content="Software, Games &amp; More">
-    <link rel="icon" type="image/png" sizes="1053x1053" href="assets/img/BXSLogo.png">
-    <link rel="icon" type="image/png" sizes="1053x1053" href="assets/img/BXSLogo.png">
-    <link rel="icon" type="image/png" sizes="1053x1053" href="assets/img/BXSLogo.png">
-    <link rel="icon" type="image/png" sizes="1053x1053" href="assets/img/BXSLogo.png">
-    <link rel="icon" type="image/png" sizes="1053x1053" href="assets/img/BXSLogo.png">
+    <link rel="icon" type="image/png" sizes="1500x1500" href="assets/img/BXS%20TRANSPARENT%20NON%20TEXT.png">
+    <link rel="icon" type="image/png" sizes="1500x1500" href="assets/img/BXS%20TRANSPARENT%20NON%20TEXT.png">
+    <link rel="icon" type="image/png" sizes="1500x1500" href="assets/img/BXS%20TRANSPARENT%20NON%20TEXT.png">
+    <link rel="icon" type="image/png" sizes="1500x1500" href="assets/img/BXS%20TRANSPARENT%20NON%20TEXT.png">
+    <link rel="icon" type="image/png" sizes="2000x2000" href="assets/img/BXS%20NON%20TRANSPARENT%20TEXT.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bitter:400,700">
@@ -35,9 +35,8 @@
 <body>
     <div class="footer-dark">
         <nav class="navbar navbar-dark navbar-expand-md bg-dark navigation-clean-button">
-            <div class="container"><a class="navbar-brand" href="#">BlaXrew Studios</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-2"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
-                <div class="collapse navbar-collapse"
-                    id="navcol-2">
+            <div class="container"><img src="assets/img/BXS%20TRANSPARENT%20NON%20TEXT.png" width="5%" style="opacity: 1;margin-right: 0.5%;"><a class="navbar-brand" href="#">BlaXrew Studios</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-2"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+                <div class="collapse navbar-collapse" id="navcol-2">
                     <ul class="nav navbar-nav mr-auto">
                         <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
@@ -45,11 +44,13 @@
                         <li class="nav-item dropdown" href="projects.html"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false" href="projects.html">Projects</a>
                             <div class="dropdown-menu"><a class="dropdown-item" href="projects.html">Overview</a>
                                 <div class="dropdown-divider"></div>
-                                <h6 class="dropdown-header">Games</h6><a class="dropdown-item disabled" href="#">Devils Hunt</a></div>
+                                <h6 class="dropdown-header">Games</h6><a class="dropdown-item disabled" href="#">Devils Hunt</a>
+                            </div>
                         </li>
                         <li class="nav-item"><a class="nav-link" href="news.html">News</a></li>
                         <li class="nav-item"><a class="nav-link" href="#">Forum</a></li>
-                    </ul><span class="navbar-text actions"> <a class="btn btn-light action-button" role="button" href="http://admin.blaxrew-studios.vision" style="margin-bottom: 0px;">Open Dashboard</a></span></div>
+                    </ul><span class="navbar-text actions"> <a class="btn btn-light action-button" role="button" href="http://admin.blaxrew-studios.vision" style="margin-bottom: 0px;">Open Dashboard</a></span>
+                </div>
             </div>
         </nav>
     </div>
@@ -106,8 +107,7 @@
                         </ul>
                         <div class="tab-content">
                             <div class="tab-pane active" role="tabpanel" id="tab-1">
-                                <p><br>A software related boardgame (Multiplayer, Singleplayer, Realife boardgame). This means this game was originally designed a boardgame but the player's stats calculation got to complicated after a while. That is why
-                                    we wrote a software for our game. If you buy the boardgame the software is normally included.<br></p>
+                                <p><br>A software related boardgame (Multiplayer, Singleplayer, Realife boardgame). This means this game was originally designed a boardgame but the player's stats calculation got to complicated after a while. That is why we wrote a software for our game. If you buy the boardgame the software is normally included.<br></p>
                             </div>
                             <div class="tab-pane" role="tabpanel" id="tab-2">
                                 <p><br>The main software is already released. You can get access to the software on request. This is just an ALPHA-Release that means you may experience bugs or issues.<br></p>
@@ -116,17 +116,7 @@
                                 <p><br>Our plans to that game are to make a online multiplayer which will cost for those who did not buy the boardgame. A player versus bot mode is planned to. We want to add a bug report section in the software too.<br></p>
                             </div>
                             <div class="tab-pane" role="tabpanel" id="tab-4">
-                                <p class="text-left"><br>PRE-ALPHA<br>0.0.1<br>Released the application's foundation<br><br>0.0.2<br>Added more Features<br>Bug Fixes<br><br>0.1.0<br>Added more features<br>fixed some bugs<br><br>0.1.1<br>Fixed design errors<br>Graphic fixes<br>Bug
-                                    fixes<br><br>0.1.2<br>Fixed some bugs<br><br>0.1.3<br>Renewed failed objects<br><br>0.2.0<br>Added features<br><br>0.3.0<br>Fixed some features<br>Added features<br><br>0.3.1<br>Added small necessary features<br><br>0.3.2<br>Fixed
-                                    some graphic glitches<br>Added some missing functions<br><br>0.3.3<br>Changed old useless contents<br>Renewed some features<br><br>0.3.4a<br>Fixed bugs<br>Added features<br><br>0.3.4b<br>Removed some glitches<br>Removed
-                                    or fixed some bugs<br>Renewed broken features<br><br>0.3.4c<br>Removed failed, glitching or bugging things<br>Renewed some renewable objects<br><br>0.4.0<br>Added features and functions<br><br>0.4.1<br>Fixed some bugs<br>Removed
-                                    some bugs<br><br>0.4.2a<br>Added features<br>Removed some bugs<br><br>0.4.2b<br>Fixed issues of the version 0.4.2a<br><br>ALPHA<br>1.0<br>Added many features<br>Fixed or removed old bugs and glitches<br>- ALPHA release<br><br>1.1<br>Fixed
-                                    some issues of version 1.0<br><br>1.2<br>Removed and renewed failed mechanics<br><br>1.3<br>Fixed some issues and bugs<br>Improved features<br><br>1.4<br>Fixed some graphics<br>Renewed the design<br><br>1.5a<br>Solved
-                                    some issues<br><br>1.5b<br>Fixed fails which ocurred in the version 1.5a - BETA<br><br>1.6a<br>Some bugs are now fixed<br>Removed some graphic glitches<br><br>1.6b<br>Some bugs are now fixed<br>Removed some 1.6a graphic
-                                    glitches<br><br>1.6c<br>Fixed some of the bugs caused by the version 1.6b<br><br>1.7a DRAFT ALPHA<br>Added field saving systems<br>Fixed some player count issues<br>Fixed player names bugs<br>Replaced outdated intro<br>Added
-                                    new draft loading systems<br><br>1.7b - DRAFT ALPHA<br>Added field saving systems<br>Fixed some player count issues<br>Fixed player names bugs<br>Replaced outdated intro<br>Added new draft loading systems<br><br>1.7
-                                    - ALPHA<br>Added field saving systems<br>Fixed some player count issues<br>Fixed player names bugs<br>Replaced outdated intro<br>Added new loading systems<br><br>1.7a - ALPHA<br>Fixed a panel issue in the loading UI<br>Fixed
-                                    saving panel<br>Player 3 saving issue is now fixed<br></p>
+                                <p class="text-left"><br>PRE-ALPHA<br>0.0.1<br>Released the application's foundation<br><br>0.0.2<br>Added more Features<br>Bug Fixes<br><br>0.1.0<br>Added more features<br>fixed some bugs<br><br>0.1.1<br>Fixed design errors<br>Graphic fixes<br>Bug fixes<br><br>0.1.2<br>Fixed some bugs<br><br>0.1.3<br>Renewed failed objects<br><br>0.2.0<br>Added features<br><br>0.3.0<br>Fixed some features<br>Added features<br><br>0.3.1<br>Added small necessary features<br><br>0.3.2<br>Fixed some graphic glitches<br>Added some missing functions<br><br>0.3.3<br>Changed old useless contents<br>Renewed some features<br><br>0.3.4a<br>Fixed bugs<br>Added features<br><br>0.3.4b<br>Removed some glitches<br>Removed or fixed some bugs<br>Renewed broken features<br><br>0.3.4c<br>Removed failed, glitching or bugging things<br>Renewed some renewable objects<br><br>0.4.0<br>Added features and functions<br><br>0.4.1<br>Fixed some bugs<br>Removed some bugs<br><br>0.4.2a<br>Added features<br>Removed some bugs<br><br>0.4.2b<br>Fixed issues of the version 0.4.2a<br><br>ALPHA<br>1.0<br>Added many features<br>Fixed or removed old bugs and glitches<br>- ALPHA release<br><br>1.1<br>Fixed some issues of version 1.0<br><br>1.2<br>Removed and renewed failed mechanics<br><br>1.3<br>Fixed some issues and bugs<br>Improved features<br><br>1.4<br>Fixed some graphics<br>Renewed the design<br><br>1.5a<br>Solved some issues<br><br>1.5b<br>Fixed fails which ocurred in the version 1.5a - BETA<br><br>1.6a<br>Some bugs are now fixed<br>Removed some graphic glitches<br><br>1.6b<br>Some bugs are now fixed<br>Removed some 1.6a graphic glitches<br><br>1.6c<br>Fixed some of the bugs caused by the version 1.6b<br><br>1.7a DRAFT ALPHA<br>Added field saving systems<br>Fixed some player count issues<br>Fixed player names bugs<br>Replaced outdated intro<br>Added new draft loading systems<br><br>1.7b - DRAFT ALPHA<br>Added field saving systems<br>Fixed some player count issues<br>Fixed player names bugs<br>Replaced outdated intro<br>Added new draft loading systems<br><br>1.7 - ALPHA<br>Added field saving systems<br>Fixed some player count issues<br>Fixed player names bugs<br>Replaced outdated intro<br>Added new loading systems<br><br>1.7a - ALPHA<br>Fixed a panel issue in the loading UI<br>Fixed saving panel<br>Player 3 saving issue is now fixed<br></p>
                             </div>
                         </div>
                     </div>
@@ -179,16 +169,16 @@
             <div class="row articles">
                 <div class="col-sm-6 col-md-4 item"><a href="#"><img class="img-fluid" src="assets/img/image005.png"></a>
                     <h3 class="name">Devils Hunt Software</h3>
-                    <p class="text-white-50 description">Download and start the software. Now you can play the boardgame together.<br><br>For more information click&nbsp; &nbsp;<a href="devils-hunt.html">here</a>.<br></p><a data-toggle="tooltip" data-bs-tooltip="" class="action" href="https://www.dropbox.com/s/4u08kus4v6k8a4w/Devils%20Hunt%20Launcher%20Setup%201.1.exe?dl=1"
-                        title="Download"><i class="material-icons">file_download</i></a><a class="action" href="https://www.dropbox.com/s/4u08kus4v6k8a4w/Devils%20Hunt%20Launcher%20Setup%201.1.exe?dl=1"></a></div>
+                    <p class="text-white-50 description">Download and start the software. Now you can play the boardgame together.<br><br>For more information click&nbsp; &nbsp;<a href="devils-hunt.html">here</a>.<br></p><a data-toggle="tooltip" data-bs-tooltip="" class="action" href="https://www.dropbox.com/s/4u08kus4v6k8a4w/Devils%20Hunt%20Launcher%20Setup%201.1.exe?dl=1" title="Download"><i class="material-icons">file_download</i></a><a class="action" href="https://www.dropbox.com/s/4u08kus4v6k8a4w/Devils%20Hunt%20Launcher%20Setup%201.1.exe?dl=1"></a>
+                </div>
                 <div class="col-sm-6 col-md-4 item"><a href="#"><img class="img-fluid" src="assets/img/image005.png"></a>
                     <h3 class="name">Devils Hunt DLC-Pack</h3>
-                    <p class="text-white-50 description">This DLC pack includes the online and player versus computer mode.&nbsp;Subscribe to the newsletter and we notify you when the online mode or the versus computer mode is out.<br></p><a data-toggle="tooltip" data-bs-tooltip="" class="action"
-                        href="#" title="Buy for $∞"><i class="la la-money"></i></a><a class="action" href="#"></a></div>
+                    <p class="text-white-50 description">This DLC pack includes the online and player versus computer mode.&nbsp;Subscribe to the newsletter and we notify you when the online mode or the versus computer mode is out.<br></p><a data-toggle="tooltip" data-bs-tooltip="" class="action" href="#" title="Buy for $∞"><i class="la la-money"></i></a><a class="action" href="#"></a>
+                </div>
                 <div class="col-sm-6 col-md-4 item"><a href="#"><img class="img-fluid" src="assets/img/image005.png"></a>
                     <h3 class="name"><strong>Devils Hunt Boardgame</strong><br></h3>
-                    <p class="text-white-50 description">Download and start the software. With this game board and cards you are able to play it in real life. We make you an offer the offered price may change over time.<br><br></p><a data-toggle="tooltip" data-bs-tooltip="" class="action"
-                        href="#" title="Buy for $+∞"><i class="la la-money"></i></a></div>
+                    <p class="text-white-50 description">Download and start the software. With this game board and cards you are able to play it in real life. We make you an offer the offered price may change over time.<br><br></p><a data-toggle="tooltip" data-bs-tooltip="" class="action" href="#" title="Buy for $+∞"><i class="la la-money"></i></a>
+                </div>
             </div>
         </div>
     </div>
@@ -218,9 +208,7 @@
                         <h3>BlaXrew Studios<br></h3>
                         <p>Here you can find our&nbsp; &nbsp;terms and policies:&nbsp;&nbsp;<br>-&nbsp; <a href="privacy%20policy.html">Privacy Policy</a><br>- <a href="Terms%20of%20Service.html">Terms of service</a><br>- <a href="impressum.html">Impressum (DE)</a></p>
                     </div>
-                    <div class="col item social"><a href="http://twitter.com/blaxrew"><i class="icon ion-social-twitter"></i></a><a href="https://www.youtube.com/channel/UChOC9uRCoD2-5hzFGEnnOJA"><i class="icon ion-social-youtube"></i></a><a href="http://github.com/blaxrewstudios"><i class="icon ion-social-github"></i></a>
-                        <a
-                            href="https://steamcommunity.com/groups/blaxrew-studios"><i class="fab fa-steam-symbol"></i></a><a href="https://discord.com/invite/ySRCsyW"><i class="fab fa-discord"></i></a><a href="mailto:blaxrewstudios.official@gmail.com"><i class="icon ion-ios-email"></i></a></div>
+                    <div class="col item social"><a href="http://twitter.com/blaxrew"><i class="icon ion-social-twitter"></i></a><a href="https://www.youtube.com/channel/UChOC9uRCoD2-5hzFGEnnOJA"><i class="icon ion-social-youtube"></i></a><a href="http://github.com/blaxrewstudios"><i class="icon ion-social-github"></i></a><a href="https://steamcommunity.com/groups/blaxrew-studios"><i class="fab fa-steam-symbol"></i></a><a href="https://discord.com/invite/ySRCsyW"><i class="fab fa-discord"></i></a><a href="mailto:blaxrewstudios.official@gmail.com"><i class="icon ion-ios-email"></i></a></div>
                 </div>
                 <p class="copyright">BlaXrew Studios © 2015-2020</p>
             </div>
