--- a/forum.html
+++ b/forum.html
@@ -12,11 +12,11 @@
     <meta name="description" content="Software, Games &amp; More">
     <meta name="twitter:title" content="BlaXrew Studios">
     <meta name="twitter:description" content="Software, Games &amp; More">
-    <link rel="icon" type="image/png" sizes="1053x1053" href="assets/img/BXSLogo.png">
-    <link rel="icon" type="image/png" sizes="1053x1053" href="assets/img/BXSLogo.png">
-    <link rel="icon" type="image/png" sizes="1053x1053" href="assets/img/BXSLogo.png">
-    <link rel="icon" type="image/png" sizes="1053x1053" href="assets/img/BXSLogo.png">
-    <link rel="icon" type="image/png" sizes="1053x1053" href="assets/img/BXSLogo.png">
+    <link rel="icon" type="image/png" sizes="1500x1500" href="assets/img/BXS%20TRANSPARENT%20NON%20TEXT.png">
+    <link rel="icon" type="image/png" sizes="1500x1500" href="assets/img/BXS%20TRANSPARENT%20NON%20TEXT.png">
+    <link rel="icon" type="image/png" sizes="1500x1500" href="assets/img/BXS%20TRANSPARENT%20NON%20TEXT.png">
+    <link rel="icon" type="image/png" sizes="1500x1500" href="assets/img/BXS%20TRANSPARENT%20NON%20TEXT.png">
+    <link rel="icon" type="image/png" sizes="2000x2000" href="assets/img/BXS%20NON%20TRANSPARENT%20TEXT.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bitter:400,700">
