--- a/about.html
+++ b/about.html
@@ -12,11 +12,11 @@
     <meta name="description" content="Software, Games &amp; More">
     <meta name="twitter:title" content="BlaXrew Studios">
     <meta name="twitter:description" content="Software, Games &amp; More">
-    <link rel="icon" type="image/png" sizes="1053x1053" href="assets/img/BXSLogo.png">
-    <link rel="icon" type="image/png" sizes="1053x1053" href="assets/img/BXSLogo.png">
-    <link rel="icon" type="image/png" sizes="1053x1053" href="assets/img/BXSLogo.png">
-    <link rel="icon" type="image/png" sizes="1053x1053" href="assets/img/BXSLogo.png">
-    <link rel="icon" type="image/png" sizes="1053x1053" href="assets/img/BXSLogo.png">
+    <link rel="icon" type="image/png" sizes="1500x1500" href="assets/img/BXS%20TRANSPARENT%20NON%20TEXT.png">
+    <link rel="icon" type="image/png" sizes="1500x1500" href="assets/img/BXS%20TRANSPARENT%20NON%20TEXT.png">
+    <link rel="icon" type="image/png" sizes="1500x1500" href="assets/img/BXS%20TRANSPARENT%20NON%20TEXT.png">
+    <link rel="icon" type="image/png" sizes="1500x1500" href="assets/img/BXS%20TRANSPARENT%20NON%20TEXT.png">
+    <link rel="icon" type="image/png" sizes="2000x2000" href="assets/img/BXS%20NON%20TRANSPARENT%20TEXT.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bitter:400,700">
@@ -35,9 +35,8 @@
 <body>
     <div class="footer-dark">
         <nav class="navbar navbar-dark navbar-expand-md bg-dark navigation-clean-button">
-            <div class="container"><a class="navbar-brand" href="#">BlaXrew Studios</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-2"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
-                <div class="collapse navbar-collapse"
-                    id="navcol-2">
+            <div class="container"><img src="assets/img/BXS%20TRANSPARENT%20NON%20TEXT.png" width="5%" style="opacity: 1;margin-right: 0.5%;"><a class="navbar-brand" href="#">BlaXrew Studios</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-2"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+                <div class="collapse navbar-collapse" id="navcol-2">
                     <ul class="nav navbar-nav mr-auto">
                         <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                         <li class="nav-item"><a class="nav-link active" href="about.html">About</a></li>
@@ -45,11 +44,13 @@
                         <li class="nav-item dropdown" href="projects.html"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false" href="projects.html">Projects</a>
                             <div class="dropdown-menu"><a class="dropdown-item" href="projects.html">Overview</a>
                                 <div class="dropdown-divider"></div>
-                                <h6 class="dropdown-header">Games</h6><a class="dropdown-item" href="devils-hunt.html">Devils Hunt</a></div>
+                                <h6 class="dropdown-header">Games</h6><a class="dropdown-item" href="devils-hunt.html">Devils Hunt</a>
+                            </div>
                         </li>
                         <li class="nav-item"><a class="nav-link" href="news.html">News</a></li>
                         <li class="nav-item"><a class="nav-link" href="#">Forum</a></li>
-                    </ul><span class="navbar-text actions"> <a class="btn btn-light action-button" role="button" href="http://admin.blaxrew-studios.vision" style="margin-bottom: 0px;">Open Dashboard</a></span></div>
+                    </ul><span class="navbar-text actions"> <a class="btn btn-light action-button" role="button" href="http://admin.blaxrew-studios.vision" style="margin-bottom: 0px;">Open Dashboard</a></span>
+                </div>
             </div>
         </nav>
     </div>
@@ -58,11 +59,9 @@
             <div class="row">
                 <div class="col">
                     <h2 class="text-white">About us</h2>
-                    <p class="text-white-50">Were a small team producing Software, Games, Music, Videos, Movies and other stuff. Many software projects are open source and available on github. If you want to learn more about our projects click&nbsp; &nbsp;&nbsp;<a href="projects.html">here</a>.<br></p>
-                    <h2
-                        class="text-white">Careers</h2>
-                        <p class="text-white-50">If you think you&nbsp; are the right and want to apply fill in the form below&nbsp; or send an email to blaxrew.studios@gmail.com with the subject "Application"&nbsp; to apply. We are <strong>not</strong>&nbsp; training you. When
-                            you apply and we accept, we&nbsp; are going to test if you fit into the rest of the team. This is an unpayed job, that means you will not gain any money at the moment if&nbsp; you are part of the team.</p>
+                    <p class="text-white-50">Were a small team producing Software, Games, Music, Videos, Movies and other stuff. Many software projects are open source and available on github. If you want to learn more about our projects click&nbsp;<a href="projects.html">here</a>.<br></p>
+                    <h2 class="text-white">Careers</h2>
+                    <p class="text-white-50">If you think you are the right one and want to apply fill in the form below&nbsp;or send an email to blaxrew.studios@gmail.com with the subject "Application"&nbsp;to apply. We are not&nbsp;training you. When you apply and we accept, we&nbsp;are going to test if you fit to the rest of the team. This is an unpaid job, that means you will not gain any money at the moment if&nbsp;you are part of the team.</p>
                 </div>
             </div>
         </div>
@@ -70,12 +69,10 @@
     <div class="bg-dark contact-clean" style="padding-top: 40px;">
         <form class="bg-dark shadow-lg" style="padding-top: 0px;" data-bss-recipient="c6268884f198426de24f9a36bbd9ca7d" data-bss-subject="contact">
             <h2 class="text-center text-white" style="padding: 10px;">Contact us</h2>
-            <div class="form-group"><input class="form-control" type="text" name="name" placeholder="Name"></div><input class="border-dark form-control is-invalid" type="email" name="email" placeholder="Email" inputmode="email" style="margin-bottom: 15px;" required="" pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[A-Za-z]{2,4}">
-            <input
-                class="form-control" type="text" name="subject" placeholder="Subject" style="margin-bottom: 15px;">
-                <div class="form-group"><textarea class="form-control" name="message" placeholder="Message" rows="14"></textarea></div>
-                <div class="form-group"><button class="btn btn-primary disabled btn-block" id="asend" type="submit" disabled="" style="margin-left: 0px;">send </button></div>
-                <div class="form-check" style="padding-top: 10px;"><input class="form-check-input" type="checkbox" id="atogBtn"><label class="form-check-label text-light" for="tapa" style="font-size: 0.83em;">By continuing you agree to our <a href="Terms%20of%20Service.html">Tems of&nbsp; Service</a>&nbsp; and&nbsp; <a href="privacy%20policy.html">Privacy&nbsp; Policy</a>.&nbsp;</label></div>
+            <div class="form-group"><input class="form-control" type="text" name="name" placeholder="Name"></div><input class="border-dark form-control is-invalid" type="email" name="email" placeholder="Email" inputmode="email" style="margin-bottom: 15px;" required="" pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[A-Za-z]{2,4}"><input class="form-control" type="text" name="subject" placeholder="Subject" style="margin-bottom: 15px;">
+            <div class="form-group"><textarea class="form-control" name="message" placeholder="Message" rows="14"></textarea></div>
+            <div class="form-group"><button class="btn btn-primary disabled btn-block" id="asend" type="submit" disabled="" style="margin-left: 0px;">send </button></div>
+            <div class="form-check" style="padding-top: 10px;"><input class="form-check-input" type="checkbox" id="atogBtn"><label class="form-check-label text-light" for="tapa" style="font-size: 0.83em;">By continuing you agree to our <a href="Terms%20of%20Service.html">Tems of&nbsp; Service</a>&nbsp; and&nbsp; <a href="privacy%20policy.html">Privacy&nbsp; Policy</a>.&nbsp;</label></div>
         </form>
     </div>
     <div class="text-white bg-dark team-boxed">
@@ -138,9 +135,7 @@
                         <h3>BlaXrew Studios<br></h3>
                         <p>Here you can find our&nbsp; &nbsp;terms and policies:&nbsp;&nbsp;<br>-&nbsp; <a href="privacy%20policy.html">Privacy Policy</a><br>- <a href="Terms%20of%20Service.html">Terms of service</a><br>- <a href="impressum.html">Impressum (DE)</a></p>
                     </div>
-                    <div class="col item social"><a href="http://twitter.com/blaxrew"><i class="icon ion-social-twitter"></i></a><a href="https://www.youtube.com/channel/UChOC9uRCoD2-5hzFGEnnOJA"><i class="icon ion-social-youtube"></i></a><a href="http://github.com/blaxrewstudios"><i class="icon ion-social-github"></i></a>
-                        <a
-                            href="https://steamcommunity.com/groups/blaxrew-studios"><i class="fab fa-steam-symbol"></i></a><a href="https://discord.com/invite/ySRCsyW"><i class="fab fa-discord"></i></a><a href="mailto:blaxrewstudios.official@gmail.com"><i class="icon ion-ios-email"></i></a></div>
+                    <div class="col item social"><a href="http://twitter.com/blaxrew"><i class="icon ion-social-twitter"></i></a><a href="https://www.youtube.com/channel/UChOC9uRCoD2-5hzFGEnnOJA"><i class="icon ion-social-youtube"></i></a><a href="http://github.com/blaxrewstudios"><i class="icon ion-social-github"></i></a><a href="https://steamcommunity.com/groups/blaxrew-studios"><i class="fab fa-steam-symbol"></i></a><a href="https://discord.com/invite/ySRCsyW"><i class="fab fa-discord"></i></a><a href="mailto:blaxrewstudios.official@gmail.com"><i class="icon ion-ios-email"></i></a></div>
                 </div>
                 <p class="copyright">BlaXrew Studios © 2015-2020</p>
             </div>
