--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <meta name="description" content="Software, Games &amp; More">
     <meta name="twitter:title" content="BlaXrew Studios">
     <meta name="twitter:description" content="Software, Games &amp; More">
-    <link rel="icon" type="image/png" sizes="1053x1053" href="assets/img/BXSLogo.png">
-    <link rel="icon" type="image/png" sizes="1053x1053" href="assets/img/BXSLogo.png">
-    <link rel="icon" type="image/png" sizes="1053x1053" href="assets/img/BXSLogo.png">
-    <link rel="icon" type="image/png" sizes="1053x1053" href="assets/img/BXSLogo.png">
-    <link rel="icon" type="image/png" sizes="1053x1053" href="assets/img/BXSLogo.png">
+    <link rel="icon" type="image/png" sizes="1500x1500" href="assets/img/BXS%20TRANSPARENT%20NON%20TEXT.png">
+    <link rel="icon" type="image/png" sizes="1500x1500" href="assets/img/BXS%20TRANSPARENT%20NON%20TEXT.png">
+    <link rel="icon" type="image/png" sizes="1500x1500" href="assets/img/BXS%20TRANSPARENT%20NON%20TEXT.png">
+    <link rel="icon" type="image/png" sizes="1500x1500" href="assets/img/BXS%20TRANSPARENT%20NON%20TEXT.png">
+    <link rel="icon" type="image/png" sizes="2000x2000" href="assets/img/BXS%20NON%20TRANSPARENT%20TEXT.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bitter:400,700">
@@ -35,9 +35,8 @@
 <body>
     <div class="footer-dark">
         <nav class="navbar navbar-dark navbar-expand-md bg-dark navigation-clean-button">
-            <div class="container"><a class="navbar-brand" href="#">BlaXrew Studios</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-2"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
-                <div class="collapse navbar-collapse"
-                    id="navcol-2">
+            <div class="container"><img src="assets/img/BXS%20TRANSPARENT%20NON%20TEXT.png" width="5%" style="opacity: 1;margin-right: 0.5%;"><a class="navbar-brand" href="#">BlaXrew Studios</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-2"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+                <div class="collapse navbar-collapse" id="navcol-2">
                     <ul class="nav navbar-nav mr-auto">
                         <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
@@ -45,14 +44,16 @@
                         <li class="nav-item dropdown" href="projects.html"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false" href="projects.html">Projects</a>
                             <div class="dropdown-menu"><a class="dropdown-item" href="projects.html">Overview</a>
                                 <div class="dropdown-divider"></div>
-                                <h6 class="dropdown-header">Games</h6><a class="dropdown-item" href="devils-hunt.html">Devils Hunt</a></div>
+                                <h6 class="dropdown-header">Games</h6><a class="dropdown-item" href="devils-hunt.html">Devils Hunt</a>
+                            </div>
                         </li>
                         <li class="nav-item"><a class="nav-link" href="news.html">News</a></li>
                         <li class="nav-item"><a class="nav-link" href="#">Forum</a></li>
-                    </ul><span class="navbar-text actions"> <a class="btn btn-light action-button" role="button" href="http://admin.blaxrew-studios.vision" style="margin-bottom: 0px;">Open Dashboard</a></span></div>
+                    </ul><span class="navbar-text actions"> <a class="btn btn-light action-button" role="button" href="http://admin.blaxrew-studios.vision" style="margin-bottom: 0px;">Open Dashboard</a></span>
+                </div>
             </div>
         </nav>
-        <div class="header-dark" style="background: url(&quot;assets/img/image0005%20-%20Kopie_222.jpg&quot;) center / cover;">
+        <div class="header-dark" style="background: url(&quot;assets/img/Copy%20of%20BXS%20Animated%20Logo.gif&quot;) center / cover;">
             <div class="container hero">
                 <div class="row">
                     <div class="col-md-8 offset-md-2">
@@ -69,7 +70,7 @@
             <div class="row">
                 <div class="col-md-12 text-light" style="margin-top: 25px;">
                     <h1>BlaXrew Studios</h1>
-                    <p>Were a small team producing Software, Games, Music, Videos, Movies and other stuff. Many software projects are open source and available on github. If you want to learn more about our projects click&nbsp; &nbsp;&nbsp;<a href="projects.html">here</a>.<br><br></p>
+                    <p>Were a small team producing Software, Games, Music, Videos, Movies and other stuff. Many software projects are open source and available on github. If you want to learn more about our projects click&nbsp;<a href="projects.html">here</a>.<br><br></p>
                 </div>
             </div>
         </div>
@@ -114,9 +115,7 @@
                         <h3>BlaXrew Studios</h3>
                         <p>Here you can find our&nbsp; &nbsp;terms and policies:&nbsp;&nbsp;<br>-&nbsp; <a href="privacy%20policy.html">Privacy Policy</a><br>- <a href="Terms%20of%20Service.html">Terms of service</a><br>- <a href="impressum.html">Impressum (DE)</a></p>
                     </div>
-                    <div class="col item social"><a href="http://twitter.com/blaxrew"><i class="icon ion-social-twitter"></i></a><a href="https://www.youtube.com/channel/UChOC9uRCoD2-5hzFGEnnOJA"><i class="icon ion-social-youtube"></i></a><a href="http://github.com/blaxrewstudios"><i class="icon ion-social-github"></i></a>
-                        <a
-                            href="https://steamcommunity.com/groups/blaxrew-studios"><i class="fab fa-steam-symbol"></i></a><a href="https://discord.com/invite/ySRCsyW"><i class="fab fa-discord"></i></a><a href="mailto:blaxrewstudios.official@gmail.com"><i class="icon ion-ios-email"></i></a></div>
+                    <div class="col item social"><a href="http://twitter.com/blaxrew"><i class="icon ion-social-twitter"></i></a><a href="https://www.youtube.com/channel/UChOC9uRCoD2-5hzFGEnnOJA"><i class="icon ion-social-youtube"></i></a><a href="http://github.com/blaxrewstudios"><i class="icon ion-social-github"></i></a><a href="https://steamcommunity.com/groups/blaxrew-studios"><i class="fab fa-steam-symbol"></i></a><a href="https://discord.com/invite/ySRCsyW"><i class="fab fa-discord"></i></a><a href="mailto:blaxrewstudios.official@gmail.com"><i class="icon ion-ios-email"></i></a></div>
                 </div>
                 <p class="copyright">BlaXrew Studios © 2015-2020</p>
             </div>
@@ -126,7 +125,8 @@
     <div></div>
     <div class="btn-group" role="group"></div>
     <div class="alert cookiealert text-center">
-        <p class="rubberBand animated">We use cookies to give you the best experience. Read our <a href="privacy%20policy.html">cookie policy</a>.</p><button class="btn btn-primary btn-sm acceptcookies" type="button">Accept</button></div>
+        <p class="rubberBand animated">We use cookies to give you the best experience. Read our <a href="privacy%20policy.html">cookie policy</a>.</p><button class="btn btn-primary btn-sm acceptcookies" type="button">Accept</button>
+    </div>
     <div></div>
     <div></div>
     <section class="showcase"></section>
