--- a/projects.html
+++ b/projects.html
@@ -12,11 +12,11 @@
     <meta name="description" content="Software, Games &amp; More">
     <meta name="twitter:title" content="BlaXrew Studios">
     <meta name="twitter:description" content="Software, Games &amp; More">
-    <link rel="icon" type="image/png" sizes="1053x1053" href="assets/img/BXSLogo.png">
-    <link rel="icon" type="image/png" sizes="1053x1053" href="assets/img/BXSLogo.png">
-    <link rel="icon" type="image/png" sizes="1053x1053" href="assets/img/BXSLogo.png">
-    <link rel="icon" type="image/png" sizes="1053x1053" href="assets/img/BXSLogo.png">
-    <link rel="icon" type="image/png" sizes="1053x1053" href="assets/img/BXSLogo.png">
+    <link rel="icon" type="image/png" sizes="1500x1500" href="assets/img/BXS%20TRANSPARENT%20NON%20TEXT.png">
+    <link rel="icon" type="image/png" sizes="1500x1500" href="assets/img/BXS%20TRANSPARENT%20NON%20TEXT.png">
+    <link rel="icon" type="image/png" sizes="1500x1500" href="assets/img/BXS%20TRANSPARENT%20NON%20TEXT.png">
+    <link rel="icon" type="image/png" sizes="1500x1500" href="assets/img/BXS%20TRANSPARENT%20NON%20TEXT.png">
+    <link rel="icon" type="image/png" sizes="2000x2000" href="assets/img/BXS%20NON%20TRANSPARENT%20TEXT.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bitter:400,700">
@@ -35,9 +35,8 @@
 <body>
     <div class="footer-dark">
         <nav class="navbar navbar-dark navbar-expand-md bg-dark navigation-clean-button">
-            <div class="container"><a class="navbar-brand" href="#">BlaXrew Studios</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
-                <div class="collapse navbar-collapse"
-                    id="navcol-1">
+            <div class="container"><img src="assets/img/BXS%20TRANSPARENT%20NON%20TEXT.png" width="5%" style="opacity: 1;margin-right: 0.5%;"><a class="navbar-brand" href="#">BlaXrew Studios</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+                <div class="collapse navbar-collapse" id="navcol-1">
                     <ul class="nav navbar-nav mr-auto">
                         <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
@@ -45,11 +44,13 @@
                         <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false" href="projects.html">Projects</a>
                             <div class="dropdown-menu"><a class="dropdown-item" href="projects.html">Overview</a>
                                 <div class="dropdown-divider"></div>
-                                <h6 class="dropdown-header">Games</h6><a class="dropdown-item" href="devils-hunt.html">Devils Hunt</a></div>
+                                <h6 class="dropdown-header">Games</h6><a class="dropdown-item" href="devils-hunt.html">Devils Hunt</a>
+                            </div>
                         </li>
                         <li class="nav-item"><a class="nav-link" href="news.html">News</a></li>
                         <li class="nav-item"><a class="nav-link" href="#">Forum</a></li>
-                    </ul><span class="navbar-text actions"> <a class="btn btn-light action-button" role="button" href="http://admin.blaxrew-studios.vision" style="margin-bottom: 0px;">Open Dashboard</a></span></div>
+                    </ul><span class="navbar-text actions"> <a class="btn btn-light action-button" role="button" href="http://admin.blaxrew-studios.vision" style="margin-bottom: 0px;">Open Dashboard</a></span>
+                </div>
             </div>
         </nav>
     </div>
@@ -65,7 +66,8 @@
                         <div class="col-md-12 col-lg-5"><a href="#"><img class="img-fluid" src="assets/img/image005.png"></a></div>
                         <div class="col">
                             <h3 class="name">Devils Hunt</h3>
-                            <p class="text-white-50 description">A software related boardgame<br>(Multiplayer, Singleplayer, Realife boardgame)<br></p><a class="btn btn-outline-primary btn-block btn-sm" role="button" style="margin-top: 5px;margin-left: 0px;" href="devils-hunt.html">Learn More</a></div>
+                            <p class="text-white-50 description">A software related boardgame<br>(Multiplayer, Singleplayer, Realife boardgame)<br></p><a class="btn btn-outline-primary btn-block btn-sm" role="button" style="margin-top: 5px;margin-left: 0px;" href="devils-hunt.html">Learn More</a>
+                        </div>
                     </div>
                 </div>
                 <div class="col-sm-6 item">
@@ -73,7 +75,8 @@
                         <div class="col-md-12 col-lg-5"><a href="#"><img class="img-fluid" src="assets/img/image0005%20-%20Kopie.png" style="margin-top: 10px;"></a></div>
                         <div class="col">
                             <h3 class="name">Fallen World</h3>
-                            <p class="text-white-50 description">A 3D story game (planned with RTX). This game includes a time paradox and an invasion<br></p><button class="btn btn-outline-primary btn-block btn-sm" type="button" style="margin-top: 5px;margin-bottom: 10px;margin-left: 0px;">Learn More</button></div>
+                            <p class="text-white-50 description">A 3D story game (planned with RTX). This game includes a time paradox and an invasion<br></p><button class="btn btn-outline-primary btn-block btn-sm" type="button" style="margin-top: 5px;margin-bottom: 10px;margin-left: 0px;">Learn More</button>
+                        </div>
                     </div>
                 </div>
                 <div class="col-sm-6 item">
@@ -81,7 +84,8 @@
                         <div class="col-md-12 col-lg-5"><a href="#"><img class="img-fluid" src="assets/img/Banner%201%201920x1080.png" style="margin-top: 5px;"></a></div>
                         <div class="col">
                             <h3 class="name">LaS</h3>
-                            <p class="text-white-50 description">Lights and Shadows is a mini adventure game in which you go the way of lights or shadows.<br></p><button class="btn btn-outline-primary btn-block btn-sm" type="button" style="margin-top: 5px;margin-left: 0px;">Learn More</button></div>
+                            <p class="text-white-50 description">Lights and Shadows is a mini adventure game in which you go the way of lights or shadows.<br></p><button class="btn btn-outline-primary btn-block btn-sm" type="button" style="margin-top: 5px;margin-left: 0px;">Learn More</button>
+                        </div>
                     </div>
                 </div>
                 <div class="col-sm-6 item">
@@ -89,7 +93,8 @@
                         <div class="col-md-12 col-lg-5"><a href="#"><img class="img-fluid" src="assets/img/image0005%20-%20Kopie.png" style="margin-top: 5px;"></a></div>
                         <div class="col">
                             <h3 class="name">Trix Pong</h3>
-                            <p class="text-white-50 description">This is a game developed by H4rdw4r3. It is a mini soccer game<br></p><button class="btn btn-outline-primary btn-block btn-sm" type="button" style="margin-top: 5px;margin-left: 0px;">Learn More</button></div>
+                            <p class="text-white-50 description">This is a game developed by H4rdw4r3. It is a mini soccer game<br></p><button class="btn btn-outline-primary btn-block btn-sm" type="button" style="margin-top: 5px;margin-left: 0px;">Learn More</button>
+                        </div>
                     </div>
                 </div>
                 <div class="col-sm-6 item">
@@ -97,7 +102,8 @@
                         <div class="col-md-12 col-lg-5"><a href="#"><img class="img-fluid" src="assets/img/image0005%20-%20Kopie.png" style="margin-top: 5px;"></a></div>
                         <div class="col">
                             <h3 class="name">Filming Project</h3>
-                            <p class="text-white-50 description">You only get access to it on request. Because it is only available for a group<br></p><button class="btn btn-outline-primary btn-block btn-sm" type="button" style="margin-top: 5px;margin-left: 0px;">Contact us</button></div>
+                            <p class="text-white-50 description">You only get access to it on request. Because it is only available for a group<br></p><button class="btn btn-outline-primary btn-block btn-sm" type="button" style="margin-top: 5px;margin-left: 0px;">Contact us</button>
+                        </div>
                     </div>
                 </div>
                 <div class="col-sm-6 item">
@@ -105,7 +111,8 @@
                         <div class="col-md-12 col-lg-5"><a href="#"><img class="img-fluid" src="assets/img/Unbenannt.png"></a></div>
                         <div class="col">
                             <h3 class="name">MD Script</h3>
-                            <p class="text-white-50 description">This is called minecraft datapack script and is build to visualize and simplify the datapack creation<br></p><button class="btn btn-outline-primary btn-block btn-sm" type="button" style="margin-top: 5px;margin-bottom: 10px;margin-left: 0px;">Learn More</button></div>
+                            <p class="text-white-50 description">This is called minecraft datapack script and is build to visualize and simplify the datapack creation<br></p><button class="btn btn-outline-primary btn-block btn-sm" type="button" style="margin-top: 5px;margin-bottom: 10px;margin-left: 0px;">Learn More</button>
+                        </div>
                     </div>
                 </div>
                 <div class="col-sm-6 item">
@@ -113,7 +120,8 @@
                         <div class="col-md-12 col-lg-5"><a href="#"><img class="img-fluid" src="assets/img/image0005%20-%20Kopie.png" style="margin-top: 5px;"></a></div>
                         <div class="col">
                             <h3 class="name">RCB</h3>
-                            <p class="text-white-50 description">Random Characteristics Battle is a minigame built in the Windows Command Prompt</p><button class="btn btn-outline-primary btn-block btn-sm" type="button" style="margin-top: 5px;margin-left: 0px;">Learn More</button></div>
+                            <p class="text-white-50 description">Random Characteristics Battle is a minigame built in the Windows Command Prompt</p><button class="btn btn-outline-primary btn-block btn-sm" type="button" style="margin-top: 5px;margin-left: 0px;">Learn More</button>
+                        </div>
                     </div>
                 </div>
                 <div class="col-sm-6 item">
@@ -121,7 +129,8 @@
                         <div class="col-md-12 col-lg-5"><a href="#"><img class="img-fluid" src="assets/img/image0005%20-%20Kopie.png" style="margin-top: 5px;"></a></div>
                         <div class="col">
                             <h3 class="name">Tower Climber</h3>
-                            <p class="text-white-50 description">This is a 3D (FPS Controlled) game which you play online with other players together.</p><button class="btn btn-outline-primary disabled btn-block btn-sm" type="button" style="margin-top: 5px;margin-left: 0px;" disabled="">Learn More</button></div>
+                            <p class="text-white-50 description">This is a 3D (FPS Controlled) game which you play online with other players together.</p><button class="btn btn-outline-primary disabled btn-block btn-sm" type="button" style="margin-top: 5px;margin-left: 0px;" disabled="">Learn More</button>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -154,9 +163,7 @@
                         <h3>BlaXrew Studios</h3>
                         <p>Here you can find our&nbsp; &nbsp;terms and policies:&nbsp;&nbsp;<br>-&nbsp; <a href="privacy%20policy.html">Privacy Policy</a><br>- <a href="Terms%20of%20Service.html">Terms of service</a><br>- <a href="impressum.html">Impressum (DE)</a></p>
                     </div>
-                    <div class="col item social"><a href="http://twitter.com/blaxrew"><i class="icon ion-social-twitter"></i></a><a href="https://www.youtube.com/channel/UChOC9uRCoD2-5hzFGEnnOJA"><i class="icon ion-social-youtube"></i></a><a href="http://github.com/blaxrewstudios"><i class="icon ion-social-github"></i></a>
-                        <a
-                            href="https://steamcommunity.com/groups/blaxrew-studios"><i class="fab fa-steam-symbol"></i></a><a href="https://discord.com/invite/ySRCsyW"><i class="fab fa-discord"></i></a><a href="mailto:blaxrewstudios.official@gmail.com"><i class="icon ion-ios-email"></i></a></div>
+                    <div class="col item social"><a href="http://twitter.com/blaxrew"><i class="icon ion-social-twitter"></i></a><a href="https://www.youtube.com/channel/UChOC9uRCoD2-5hzFGEnnOJA"><i class="icon ion-social-youtube"></i></a><a href="http://github.com/blaxrewstudios"><i class="icon ion-social-github"></i></a><a href="https://steamcommunity.com/groups/blaxrew-studios"><i class="fab fa-steam-symbol"></i></a><a href="https://discord.com/invite/ySRCsyW"><i class="fab fa-discord"></i></a><a href="mailto:blaxrewstudios.official@gmail.com"><i class="icon ion-ios-email"></i></a></div>
                 </div>
                 <p class="copyright">BlaXrew Studios © 2015-2020</p>
             </div>
